err/eyestudio.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/eyestudio'...
Listing './lib/python3.5/site-packages/eyestudio/Analysis'...
Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser.py", line 32
    print new_data[i,1]
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120.py", line 52
    print alg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120HMM.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120HMM.py", line 32
    print new_data[i,1]
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120filtering.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120filtering.py", line 45
    print alg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120filteringIDT.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120filteringIDT.py", line 47
    print alg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120filteringIVT.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser120filteringIVT.py", line 46
    print alg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser60filtering.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyser60filtering.py", line 70
    print alg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyserHMM.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyserHMM.py", line 32
    print new_data[i,1]
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyserHMM2.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchAnalyserHMM2.py", line 33
    print new_data[i,1]
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/BatchTFFtester.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/BatchTFFtester.py", line 35
    print alg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/DataPickerOuter.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/DataPickerOuter.py", line 16
    print engine.data[i,0], engine.data[i,1]
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/Analysis/NoiseReview.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Analysis/NoiseReview.py", line 42
    print "%s, %s, %s" % (data[i,0], data[i,1], vf)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eyestudio/Engine'...
Compiling './lib/python3.5/site-packages/eyestudio/Engine/Engine.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Engine/Engine.py", line 98
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eyestudio/Filtering'...
Compiling './lib/python3.5/site-packages/eyestudio/Filtering/sgolay.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Filtering/sgolay.py", line 53
    except ValueError, msg:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eyestudio/Filters'...
Compiling './lib/python3.5/site-packages/eyestudio/Filters/HMM.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Filters/HMM.py", line 323
    print "---------------------"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eyestudio/Metrics'...
Compiling './lib/python3.5/site-packages/eyestudio/Metrics/CompareWithStimulus.py'...
***   File "./lib/python3.5/site-packages/eyestudio/Metrics/CompareWithStimulus.py", line 48
    print "Error: Analysis data must contain stimuli"
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eyestudio/PyQt'...
Compiling './lib/python3.5/site-packages/eyestudio/PyQt/EyeAnalyser.py'...
***   File "./lib/python3.5/site-packages/eyestudio/PyQt/EyeAnalyser.py", line 290
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eyestudio/PyQt/EyeStudio.py'...
***   File "./lib/python3.5/site-packages/eyestudio/PyQt/EyeStudio.py", line 442
    print "Using the following parameters:"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eyestudio/arranger.py'...
***   File "./lib/python3.5/site-packages/eyestudio/arranger.py", line 16
    print "Usage:"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eyestudio-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
